<resources>
    <string name="app_name">Your dream</string>
    <string name="facebook_app_id">318294232450493</string>
    <string name="fb_login_protocol_scheme">fb318294232450493</string>
    <string name="att_result">Result</string>
    <string name="or_delimeter">or</string>
    <string name="create_account">Create account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">Nick</string>
    <string name="birth_date">Birth date</string>
    <string name="your_nickname">Your nick</string>
    <string name="what_are_you_like">What are you look like?</string>
    <string name="height">Height</string>
    <string name="default_seekbar">0.0</string>
    <string name="weight_seekbar">Weight</string>
    <string name="default_weight">0.0</string>
    <string name="race">Race:</string>
    <string name="reg_form_email">Email</string>
    <string name="reg_form_password">Password</string>

    <string-array name="days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="years">
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
    </string-array>

    <string-array name="races">
        <item>White</item>
        <item>Black (AA)</item>
        <item>Asian</item>
        <item>Latino</item>
        <item>Am. Indian</item>
        <item>Nat. Hawaiian</item>
    </string-array>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Header</string>
    <string name="action_settings">Settings</string>
    <string name="other_data_text_view">Other data</string>
    <string name="have_house_text_view">I have a house</string>
    <string name="have_car_text_view">I have a car</string>
    <string name="i_m_a_single_person">I\'m a single person</string>
    <string name="we_are_a_couple">We are couple</string>
    <string name="have_motorcycle_text_view">I have a motorcycle</string>
    <string name="make_it_clear">I want to make clear *</string>
    <string name="optional_text_view">* Optional</string>
    <string name="agreement_checkbox">I accept</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="select_from_gallery">Choose from gallery</string>
    <string name="your_age">Ваш возраст</string>
    <string name="less_twenty_five">Меньше 25</string>
    <string name="twenty_five_nine">25-29</string>
    <string name="more_thirty">Больше 30</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="we_sent_confirmation_to_your_account">We sent confirmation to your account</string>
    <string name="i_m_looking_for_time_to_time_meets">I\'m looking for time to time meets</string>
    <string name="i_m_looking_for_serious_relationships">I\'m looking for serious relationships</string>
    <string name="what_do_you_prefer">What do you prefer?</string>
    <string name="sign_in_text">Sign In</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="free_stars">Free stars</string>
    <string name="chat">Chat</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log out</string>
</resources>
