<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_messages"
                android:icon="@drawable/new_post_24_icon"
                android:title="@string/messages"/>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile_24"
                android:title="@string/profile"/>
        <item
                android:id="@+id/nav_free_stars"
                android:icon="@drawable/free_stars_24"
                android:title="@string/free_stars"/>
        <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/char_24"
                android:title="@string/chat"/>
        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/help_24_icon"
                android:title="@string/help"/>
        <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/feedback_24"
                android:title="@string/feedback"/>
        <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/sign_out_24"
                android:title="@string/log_out"/>
    </group>

</menu>
