<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffcfe2 ">

        <ImageView
                android:src="@drawable/heart_back"
                android:layout_width="102dp"
                android:layout_height="96dp"
                android:id="@+id/iView12"
                android:rotation="15" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/preferneces_text_view" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.674" app:layout_constraintVertical_bias="0.111"
                app:layout_constraintTop_toBottomOf="@+id/iView13"/>
        <ImageView
                android:src="@drawable/heart_back"
                android:layout_width="102dp"
                android:layout_height="96dp"
                android:id="@+id/iView13"
                android:rotation="5" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/preferneces_text_view" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.76"
                app:layout_constraintVertical_bias="0.061"/>
        <Button
                android:background="?attr/selectableItemBackground"
                android:drawableEnd="@drawable/arrow_right_24_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/enter_second_next_btn2"
                android:drawableRight="@drawable/arrow_right_24_icon"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/terms_and_conditions" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="1.0"/>
        <TextView
                android:text="@string/terms_and_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/terms_and_conditions"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/enter_agreement_checkbox"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="8dp" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_bias="0.39" app:layout_constraintVertical_bias="0.0"
                android:textSize="16sp"/>
        <CheckBox
                android:text="@string/agreement_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enter_agreement_checkbox"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupLasPage" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.031"
                app:layout_constraintVertical_bias="0.636" android:textSize="16sp"/>
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/preferneces_text_view"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.632" app:layout_constraintVertical_bias="0.095"
                android:id="@+id/radioGroupLasPage">

            <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/i_m_looking_for_time_to_time_meets" android:id="@+id/enter_one_time_radio_button"
                    android:checked="true" android:clickable="true" android:textSize="18sp"/>
            <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/i_m_looking_for_serious_relationships" android:id="@+id/enter_serious_radio_button" android:clickable="true"
                    android:textSize="18sp"/>
        </RadioGroup>
        <TextView
                android:text="@string/what_do_you_prefer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/preferneces_text_view" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.485" app:layout_constraintVertical_bias="0.357"
                android:textSize="22sp"/>
        <ImageView
                android:src="@drawable/heart_back"
                android:layout_width="125dp"
                android:layout_height="127dp"
                android:id="@+id/iView10" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/preferneces_text_view" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.086"
                app:layout_constraintVertical_bias="0.0" android:rotation="20"/>
        <ImageView
                android:src="@drawable/heart_back"
                android:layout_width="79dp"
                android:layout_height="70dp"
                android:id="@+id/iView11"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/preferneces_text_view" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.228" app:layout_constraintVertical_bias="1.0"
                android:rotation="-15" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iView10"/>
        <ImageView
                android:src="@drawable/heart_back"
                android:layout_width="132dp"
                android:layout_height="125dp"
                android:id="@+id/iView16" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupLasPage"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/enter_agreement_checkbox" app:layout_constraintHorizontal_bias="0.108"
                app:layout_constraintVertical_bias="0.695" android:rotation="-20"/>
        <ImageView
                android:src="@drawable/heart_back"
                android:layout_width="102dp"
                android:layout_height="95dp"
                android:id="@+id/iView17" android:rotation="15"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupLasPage"
                app:layout_constraintStart_toEndOf="@+id/iView16" android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/terms_and_conditions" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.594" app:layout_constraintVertical_bias="0.628"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
